# FengWenServer

./: .env  .gitignore  fengwen2.service  install_service.sh  manage.sh  pyproject.toml  start_server.sh  stop_server.sh  数据库和API说明文档.md
.github/workflows/: main.yml
scripts/: README.md  db_maintenance.py  init_db.py  migrate_to_postgresql.py  monitor_db.py  test_db_connection.py
src/fengwen2/: admin_auth.py  admin_models.py  api_routes.py  astrology_api.py  astrology_data_mask.py  astrology_service.py  astrology_types.py  astrology_views.py  cache_config.py  calendar_converter.py  database.py  email_service.py  main.py  mjml_render_service.py  models.py  service_manager.py  shopify_service.py  token_service.py  translation.py  utils.py  verification_service.py
src/fengwen2.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/fengwen2/templates/: astrology_report_earth.mjml.j2  astrology_report_fire.mjml.j2  astrology_report_metal.mjml.j2  astrology_report_water.mjml.j2  astrology_report_wood.mjml.j2
static/: admin.html  index.html  login.html
templates/: admin_login.html  admin_page.html  astrology_report_earth.mjml.j2  astrology_report_fire.mjml.j2  astrology_report_metal.mjml.j2  astrology_report_water.mjml.j2  astrology_report_wood.mjml.j2  verification_code.mjml.j2
